tests/testcases/errors/BCE0060-3.boo
"""
BCE0060-3.boo(5,18): BCE0060: 'Foo.toString()': no suitable method found to override. Did you mean 'ToString'?
"""
class Foo:
	override def toString():
		return "foo"

